--- a/FrontEndCrudAngular.client/src/app/Pages/empleado/empleado.component.html
+++ b/FrontEndCrudAngular.client/src/app/Pages/empleado/empleado.component.html
@@ -24,19 +24,26 @@
                 <input matInput formControlName="strCorreo">
             </mat-form-field>
         </div>
+        
         <div class="flex">
             <mat-form-field>
-                <mat-label>Fecha Ingreso</mat-label>
-                <input matInput type="datetime-local" formControlName="dtFechaIngreso">
+            <mat-label>Fecha Ingreso</mat-label>
+            <input matInput [matDatepicker]="picker" formControlName="dtFechaIngreso">
+            <mat-hint>dd/MM/yyyy</mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
         </div>
         <div class="flex">
             <mat-form-field>
-                <mat-label>Departamento</mat-label>
-                <input matInput type="number" formControlName="intDepartamentoId">
+              <mat-label>Seleccione un Departamento</mat-label>
+              <mat-select  formControlName="intDepartamentoId" name="selecDepa">
+                <mat-option *ngFor="let departamento of objListDepartamento" [value]="departamento.intIdDepartamento">
+                  {{ departamento.strNombreDepartamento }}
+                </mat-option>
+              </mat-select>
             </mat-form-field>
-        </div>
-
+          </div>
         <div class="flex">
             <button mat-flat-button color="primary" (click)="guardar()">Guardar</button>
             <button mat-flat-button color="warn" (click)="volver()" style="margin-left: 8px;">Volver</button>
