--- a/FrontEndCrudAngular.client/src/app/Pages/inicio/inicio.component.html
+++ b/FrontEndCrudAngular.client/src/app/Pages/inicio/inicio.component.html
@@ -30,18 +30,20 @@
           <td mat-cell *matCellDef="let element"> {{element.dcSalario}} </td>
         </ng-container>
       
+        
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="departamento">
+          <th mat-header-cell *matHeaderCellDef> Departamento</th>
+          <td mat-cell *matCellDef="let element"> {{ obtenerNombreDepartamento(element.intDepartamentoId) }} </td>
+        </ng-container>
+
         <!-- Symbol Column -->
         <ng-container matColumnDef="fechaIngreso">
           <th mat-header-cell *matHeaderCellDef> Fecha Contrato </th>
-          <td mat-cell *matCellDef="let element"> {{element.dtFechaIngreso}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.dtFechaIngreso  | date:"dd-MM-yyyy"}} </td>
         </ng-container>
 
         
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="fechaModificacion">
-            <th mat-header-cell *matHeaderCellDef> Fecha Modificacion</th>
-            <td mat-cell *matCellDef="let element"> {{element.dtFechaModificacion}} </td>
-          </ng-container>
         
         <!-- Symbol Column -->
         <ng-container matColumnDef="estado">
